--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-theme: minima
+theme: modernist
 title: R's Blog
 author: Robyn Maehl
 description: General Blogging related to my Projects/Repos and related info
+
