--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
-theme: modernist
+remote_theme: pages-themes/modernist@v0.2.0
+plugins:
+- jekyll-remote-theme
 title: R's Blog
 author: Robyn Maehl
 description: General Blogging related to my Projects/Repos and related info
+
 
