--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
-remote_theme: pages-themes/modernist@v0.2.0
-plugins:
-- jekyll-remote-theme
+theme: minima
 title: R's Blog
 author: Robyn Maehl
 description: General Blogging related to my Projects
+
 
 
 
